--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "max         94.767000     -26.900000      5.045000   5228.100000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "'admin.'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "'university.degree'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "'yes'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "'no'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "'married'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Converting our y variable to integer\n",
+    "df_bank[\"y\"] = pd.to_numeric(df_bank[\"y\"])\n",
+    "print(df_bank[\"y\"].dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "metadata": {
     "scrolled": true
    },
@@ -1047,7 +1066,7 @@
        "4          93.994          -36.4      4.857       5191.0  0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1102,7 @@
        "Name: education, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1123,7 @@
        "Text(0.5, 1.0, 'age distribution')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1131,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1173,7 @@
        "Name: bin_age, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1193,7 @@
        "array([3, 1, 2, 0], dtype=int64)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1232,7 @@
        "Name: job, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1257,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1302,16 +1321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481f9a4148>"
+       "<seaborn.axisgrid.FacetGrid at 0x14828179c88>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1333,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 171,
    "metadata": {
     "scrolled": true
    },
@@ -1341,10 +1360,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481f9b9148>"
+       "<seaborn.axisgrid.FacetGrid at 0x14826a452c8>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1366,16 +1385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481e5b68c8>"
+       "<seaborn.axisgrid.FacetGrid at 0x14826b49c88>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1397,16 +1416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481f097a08>"
+       "<seaborn.axisgrid.FacetGrid at 0x14826ae3b48>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1428,16 +1447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481f0d5808>"
+       "<seaborn.axisgrid.FacetGrid at 0x14827bdb048>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,16 +1478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1481f362b88>"
+       "<seaborn.axisgrid.FacetGrid at 0x1482896f388>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1490,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1714,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2019,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2050,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2039,13 +2058,6 @@
    "source": [
     "y_train.tail(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
